fixed word break in item names

--- a/pos_kuwait_retail/static/src/css/pos_receipt.css
+++ b/pos_kuwait_retail/static/src/css/pos_receipt.css
@@ -32,7 +32,6 @@
 
 .pos-receipt .table th,
 .pos-receipt .table td {
-    white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
     padding: 0 0;
